# linal

./: CMakeLists.txt
IDZ1/: CMakeLists.txt  task1.cpp  task3.cpp  task4.cpp
IDZ2/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
IDZ3/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
IDZ4/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lib/: CMakeLists.txt
lib/impl/: extended_matrix.cpp  fraction.cpp  gauss.cpp  matrix.cpp  matrix_row.cpp  matrix_utils.cpp  permutation.cpp  permutation_utils.cpp  poly.cpp
lib/include/: extended_matrix.h  fraction.h  gauss.h  matrix.h  matrix_row.h  matrix_utils.h  permutation.h  permutation_utils.h  poly.h
matrices/: CMakeLists.txt  fraction.cpp  fraction.h  gauss.cpp  gauss.h  main.cpp  matrix.cpp  matrix.h  matrix_row.cpp  matrix_row.h  task1.cpp  task3.cpp  task4.cpp  task5.cpp
matrices/src/: extended_matrix.cpp  fraction.cpp  gauss.cpp  gauss.h  matrix.cpp  matrix.h  matrix_row.cpp  matrix_row.h
src/: extended_matrix.cpp  extended_matrix.h  fraction.h  gauss.cpp  gauss.h  matrix.cpp  matrix.h  matrix_row.cpp  matrix_row.h  matrix_utils.h  permutation.cpp  permutation.h  permutation_utils.h  poly.cpp  poly.h
